--- a/programmation_lineaire/pulp.ipynb
+++ b/programmation_lineaire/pulp.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "pip install pulp\n"
+    "! pip install pulp\n"
    ]
   },
   {
@@ -44,9 +44,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pulp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Instanciation du probleme \u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m probleme \u001b[38;5;241m=\u001b[39m \u001b[43mpulp\u001b[49m\u001b[38;5;241m.\u001b[39mLpProblem(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMaximisation_du_profit\u001b[39m\u001b[38;5;124m\"\u001b[39m, pulp\u001b[38;5;241m.\u001b[39mLpMaximize)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pulp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Instanciation du probleme \n",
     "\n",
@@ -317,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
